--- a/.github/ISSUE_TEMPLATE/SECURITY_ISSUE.yml
+++ b/.github/ISSUE_TEMPLATE/SECURITY_ISSUE.yml
@@ -1,11 +1,12 @@
-name: "🐛 Security Report"
+name: "\U0001F4A5 Security Report"
 description: Create a new ticket for a security issue.
-title: "🐛 [SECURITY] - <title>"
+title: "[SECURITY] - <title>"
 labels: [
   "CVE"
 ]
 assignees:
   - mxenabled/infosec
+  - mxenabled/path
 body:
   - type: textarea
     id: description
@@ -38,7 +39,7 @@ body:
       description: Please provide the CVE, if available
       placeholder: ex. CVE-2020-36518
     validations:
-      required: true
+      required: false
   - type: textarea
     id: details
     attributes:
